--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+	<meta charset="UTF-8">
+	<meta name='description' content='Tina Luu'>
+	<meta name='keywords' content= 'Tina Luu, developer, thinkful, coding'>
 	<link rel="icon" type="image/png" href="img/icon.ico">
 	<script src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
 	<script type="text/javascript" src='script.js'></script>
@@ -14,8 +17,10 @@
 
 	  ga('create', 'UA-38564531-2', 'tinaluu.com');
 	  ga('send', 'pageview');
-
 	</script>
+	<title>tina</title>
+
+
 </head>
 
 <body>
