testing out jinja templating

--- a/index.html
+++ b/index.html
@@ -24,17 +24,13 @@
 </head>
 
 <body>
-<div id='wrapper'> 
-
+<div>
 	
+</div>
+<div id='wrapper'> 
 	<div class='name_box'>
 		<h1 class="intro">Hi, I<span class='about'>'m Tina<span>.</h1>
 	</div>
-	
-	<!--<div class='me_box'>
-		<p>I'm a Front End Developer, currently living in Vancouver, BC. </p>
-	</div> -->
-		
 	
 	<footer>
 		<nav>
